fix(web): fix vertical align for notification switch in activity

--- a/actor-apps/app-web/src/styles/profile.scss
+++ b/actor-apps/app-web/src/styles/profile.scss
@@ -23,8 +23,7 @@
       }
       .switch {
         label {
-          margin-top: 5px !important;
-          margin-right: 3px;
+          margin-top: 1px;
         }
       }
       .info {
